--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,408 @@
-.App {
-  text-align: center;
+* {
+    box-sizing: border-box;
+    padding: 0;
+    margin: 0;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+body{
+    overflow-x: hidden;
+    color: #ffffff;
+    font-family: 'Inter', sans-serif;
+    font-style: normal;
+    background: #060922;
+    background-size: 100% auto;
+    padding-top: 96px;
+    margin: 0 352px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.header{
+    width: 1920px;
+    height: 96px;
+    display: flex;
+    position: fixed;
+    background-color: #060922;
+    z-index: 100;
+    top: 0;
+    left: 0;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+
+.headerContent{
+    padding: 28px 0;
+    display: flex;
+    align-items: center;
+    flex-direction: row;
+    justify-content: space-between;
+    width: 1216px;
+    margin-left: auto;
+    margin-right: auto;
 }
 
-.App-link {
-  color: #61dafb;
+
+.header_nav{
+    font-weight: 700;
+    font-size: 18px;
+    margin-left: 20px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.header_nav ul{
+    display: flex;
+    margin: 0;
+    padding: 0;
+    list-style-type: none;
 }
+
+.header_nav a{
+    position: relative;
+    color: #fff;
+    text-decoration: none;
+    transition: color 0.25s ease-in;
+
+    padding: 10px;
+}
+
+.header_nav a::after{
+    position: absolute;
+    left: 0;
+    bottom: -10px;
+    display: block;
+    content: "";
+    width: 100%;
+    height: 2px;
+    background-color: #FBD784;
+    opacity: 0;
+    transition: all 0.2s ease-in;
+}
+.header_nav a:hover::after{
+    bottom: 0;
+    opacity: 1;
+}
+
+.header_nav a:hover{
+    color: #FBD784;
+}
+
+/*.icon1{*/
+/*    width: 36px;*/
+/*    height: 36px;*/
+/*    border: 0;*/
+/*    border-radius: 90px;*/
+/*}*/
+
+/*.icon2{*/
+/*    width: 36px;*/
+/*    height: 36px;*/
+/*    border: 0;*/
+/*    border-radius: 90px;*/
+/*}*/
+
+
+
+.button{
+    height: 36px;
+    width: 36px;
+}
+
+
+
+.main{
+    width: 1920px;
+    height: 4198px;
+    display: block;
+    justify-content: center;
+}
+
+
+.Comands_div{
+    width: 1920px;
+    height: auto;
+}
+
+.teamTitle{
+    background-color: rgba(14, 18, 53, 0.50);
+    width: 1216px;
+    height: 370px;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+}
+
+.socials{
+    top: -50px;
+    position: relative;
+    left: 0;
+    flex-direction: row;
+    padding: 40px;
+    display: inline-flex;
+    align-items: flex-start;
+    gap: 40px;
+}
+
+.socialItem{
+    width: 36px;
+    height: 36px;
+}
+
+.teamText{
+    text-align: center;
+    font-family: Inter;
+    font-size: 64px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+    background: linear-gradient(90deg, #09AFF4 0%, #5C35CB 100%);
+    background-clip: text;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+}
+
+.teamDescription{
+    color: #FFF;
+    font-family: Inter, sans-serif;
+    font-size: 24px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: normal;
+    text-align: center;
+    padding: 20px 0;
+}
+
+.teamBlock{
+    margin-top: 90px;
+    background: url('./../public/images/back.svg');
+    background-size: cover;
+    display: flex;
+    width: 1216px;
+    height: 388px;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.teamBlockTitle{
+    color: #FFF;
+    font-family: Inter;
+    font-size: 40px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+}
+
+.teamBlockDescription{
+    color: #FFF;
+    text-align: center;
+    font-family: Inter;
+    font-size: 24px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
+    width: 618px;
+    padding: 20px 0;
+}
+
+.groupTitle{
+    color: #FFF;
+    font-family: Inter, sans-serif;
+    font-size: 32px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+    margin: 40px 0;
+}
+
+.members{
+    display: flex;
+    align-items: start;
+    justify-content: space-around;
+    flex-wrap: wrap;
+    width: 1216px;
+    position: static;
+}
+
+.Projects{
+    width: 1216px;
+    height: auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.ProjectsTitle{
+    color: #FFF;
+    font-family: Inter, sans-serif;
+    font-size: 40px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+    padding-bottom: 40px;
+}
+
+.AimResult{
+    height: 540px;
+    width: 1216px;
+    display: flex;
+
+}
+
+.AimResultText{
+    height: 540px;
+    width: 700px;
+    display: flex;
+    flex-direction: column;
+    /*justify-content: center;*/
+    /*align-items: center;*/
+}
+
+.ARText{
+    color: #FFF;
+    font-family: Inter, sans-serif;
+    font-size: 24px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
+    padding-right: 10px;
+    padding-bottom: 10px;
+}
+
+.GPT{
+    width: 515px;
+    height: 538px;
+    border-radius: 15px;
+    position: static;
+    display: flex;
+    float: right;
+}
+
+.footer{
+    bottom: 0;
+    display: flex;
+    width: 1920px;
+    height: 424px;
+}
+
+.footerCopyright{
+    display: flex;
+    flex-direction: column;
+}
+
+.footerCopyrightLogo{
+    width: 112px;
+    height: 40px;
+}
+
+
+.footerCopyrightDesc{
+    max-width: 303px;
+    font-style: normal;
+    font-weight: 700;
+    font-size: 18px;
+    line-height: 1.78;
+}
+
+.footerCopyrightText{
+    margin-top: auto;
+    font-weight: 500;
+    font-size: 18px;
+    line-height: 1.78;
+    color: rgba(255,255,255,0.5);
+}
+
+.footerWrapper{
+    display: flex;
+}
+
+.footerNav{
+    max-width: 200px;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 18px;
+    line-height: 1.78;
+    color: #FFFFFF;
+}
+
+.footerNav + .footerNav{
+    margin-left: 212px;
+}
+
+.footerNavTitle{
+    margin-bottom: 24px;
+    font-style: normal;
+    font-weight: 700;
+    font-size: 24px;
+    line-height: 1.33;
+    color: #FBD784;
+}
+
+.footerNav ul{
+    padding: 0;
+    margin: 0 0 -16px 0;
+    list-style-type: none;
+}
+
+.footerNav li{
+    padding: 0;
+    margin: 0 0 16px 0;
+}
+
+.footerNav li:last-child{
+    margin-bottom: 0;
+}
+
+.footerNav a{
+    position: relative;
+    color: #FFFFFF;
+    text-decoration: none;
+    padding-bottom: 5px;
+}
+
+.footerNav a::after{
+    position: absolute;
+    left: 0;
+    bottom: -10px;
+    display: block;
+    content: "";
+    width: 100%;
+    height: 2px;
+    background-color: #FFFFFF;
+    opacity: 0;
+    transition: all 0.2s ease-in;
+}
+/*.App {*/
+/*  text-align: center;*/
+/*}*/
+
+/*.App-logo {*/
+/*  height: 40vmin;*/
+/*  pointer-events: none;*/
+/*}*/
+
+/*@media (prefers-reduced-motion: no-preference) {*/
+/*  .App-logo {*/
+/*    animation: App-logo-spin infinite 20s linear;*/
+/*  }*/
+/*}*/
+
+/*.App-header {*/
+/*  background-color: #282c34;*/
+/*  min-height: 100vh;*/
+/*  display: flex;*/
+/*  flex-direction: column;*/
+/*  align-items: center;*/
+/*  justify-content: center;*/
+/*  font-size: calc(10px + 2vmin);*/
+/*  color: white;*/
+/*}*/
+
+/*.App-link {*/
+/*  color: #61dafb;*/
+/*}*/
+
+/*@keyframes App-logo-spin {*/
+/*  from {*/
+/*    transform: rotate(0deg);*/
+/*  }*/
+/*  to {*/
+/*    transform: rotate(360deg);*/
+/*  }*/
+/*}*/
